2006-12-14  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (tramp-smb-handle-delete-directory)
	(tramp-smb-handle-delete-file): Write a more comprehensive error
	message.  Suggested by Tom Wurgler <twurgl@goodyear.com>.

2006-12-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (tramp-smb-errors): Add error messages.
	(tramp-smb-handle-directory-files): Fix check for MATCH.

2006-12-11  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (tramp-smb-get-file-entries):
	`tramp-smb-maybe-open-connection' must still be called when share
	is nil.

2006-12-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-password-prompt-regexp): "Passphrase" is used
	with capital first letter by PuTTY.
	(tramp-message): Add message to debug buffer only when process
	buffer is not killed.  Otherwise, debug buffer name cannot be
	determined.
	(tramp-accept-process-output): Under Win32,
	`accept-process-output' doesn't return sometimes.  So we add an
	additional timeout around.

	* tramp-smb.el (tramp-smb-send-command ): This is the only place
	to call `tramp-smb-maybe-open-connection'.  Remove all other
	calls.
	(tramp-smb-maybe-open-connection): SHARE isn't needed as
	parameter.  We compute it ourselves.
	(tramp-smb-open-connection): Set `process-connection-type', which
	was done in `tramp-smb-maybe-open-connection' before.  Pop up
	connection buffer when there are problems.

2006-12-09  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-enter-password): Inhibit function call traces in
	order to avoid passwords to be included there.

	* tramp-smb.el (tramp-smb-errors): Add error messages.
	(tramp-smb-handle-make-directory-internal): Local file names shall
	carry "\\" instead of "/".  Reported by Tom Wurgler
	<twurgl@goodyear.com>.

2006-12-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cache.el (tramp-flush-directory-property): Check whether
	KEY is a string.